force-app/main/default/objects/Zendesk__Zendesk_Ticket_Mapping__c/Zendesk__Zendesk_Ticket_Mapping__c.object-meta.xml
<CustomObject>
    <description>To store the Ticket custom field mapping from multiple Zendesk domains</description>
    <label>Zendesk Support Ticket Mapping</label>
    <nameField>
        <label>Zendesk Support Ticket Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zendesk Support Ticket Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>