force-app/main/default/objects/Zendesk__Zendesk_Ticket_Mapping__c/fields/Zendesk__Ticket_Field_ID__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Ticket_Field_ID__c</fullName>
    <description>Ticket field id for the custom field</description>
    <label>Ticket Field ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>