force-app/main/default/objects/Zendesk__Zendesk_Ticket_Mapping__c/fields/Zendesk__Zendesk_Domain__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Zendesk_Domain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zendesk Domain</label>
    <referenceTo>Zendesk__Zendesk_Domain__c</referenceTo>
    <relationshipLabel>Zendesk Support Ticket Mapping</relationshipLabel>
    <relationshipName>Zendesk_Ticket_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>