force-app/main/default/objects/Zendesk__Zendesk_Ticket_Mapping__c/fields/Zendesk__Zendesk_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Zendesk_Ticket__c</fullName>
    <label>Zendesk Support Ticket Custom Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>